--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -86,25 +86,25 @@ es_backup_schedule: "@daily"
 # ReportPortal services values
 # index default values
 index_replicas: 1
-index_image: reportportal/service-index:5.0.9
+index_image: reportportal/service-index:5.0.10
 
 # uat default values
 uat_replicas: 1
-uat_image: reportportal/service-authorization:5.2.3
+uat_image: reportportal/service-authorization:5.3.0
 
 # ui default values
 ui_replicas: 1
-ui_image: reportportal/service-ui:5.2.3
+ui_image: reportportal/service-ui:5.3.0
 
 # api default values
 api_replicas: 1
-api_image: quay.io/waynesun09/service-api:5.2.3-rootless
+api_image: reportportal/service-api:5.3.0
 rp_amqp_queues: 10
 rp_amqp_queuesperpod: 10
 
 # migration default values
-migration_image: reportportal/migrations:5.2.3
+migration_image: reportportal/migrations:5.3.0
 
 # analyzer default values
 analyzer_replicas: 1
-analyzer_image: reportportal/service-auto-analyzer:5.2.3
+analyzer_image: reportportal/service-auto-analyzer:5.3.0
