--- a/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -11,7 +11,7 @@ metadata:
             "name": "example-reportportal"
           },
           "spec": {
-            "api_image": "reportportal/service-api:5.3.0",
+            "api_image": "quay.io/waynesun09/service-api:5.3.0-rootless",
             "api_replicas": 1,
             "app_domain": "apps.test-example.com",
             "gateway_replicas": 1,
