--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -98,7 +98,7 @@ ui_image: reportportal/service-ui:5.3.0
 
 # api default values
 api_replicas: 1
-api_image: reportportal/service-api:5.3.0
+api_image: quay.io/waynesun09/service-api:5.3.0-rootless
 rp_amqp_queues: 10
 rp_amqp_queuesperpod: 10
 
