--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -2,6 +2,9 @@
 # RP gateway values
 # app_domain: apps.ocp.test.example.com
 
+# RP deploy enablement
+deploy_rp: yes
+
 # RP dependency services values
 # RabbitMQ deploy parameters
 deploy_rabbitmq: yes
@@ -108,3 +111,8 @@ migration_image: reportportal/migrations:5.3.0
 # analyzer default values
 analyzer_replicas: 1
 analyzer_image: reportportal/service-auto-analyzer:5.3.0
+
+# Recovery related default values
+pg_recovery: no
+pg_recovery_target_time: ''
+es_restore: no
