--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -115,4 +115,5 @@ analyzer_image: reportportal/service-auto-analyzer:5.3.0
 # Recovery related default values
 pg_recovery: no
 pg_recovery_target_time: ''
+pg_restic_snapshot_id: latest
 es_restore: no
