--- a/deploy/crds/rp5.reportportal.io_reportportals_crd.yaml
+++ b/deploy/crds/rp5.reportportal.io_reportportals_crd.yaml
@@ -14,6 +14,7 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -26,10 +27,11 @@ spec:
             submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
           type: string
         metadata:
-          description: Metadata definition for the ReportPortal object
+          name: ReportPortal
           type: object
         spec:
           description: Specification of the desired behavior of the ReportPortal Operator.
+          type: object
           properties:
             app_domain:
               description: Clustser default sub domain hostname for the apps, if specified route will be created with $namespace-reportportal.$app_domain
