--- a/deploy/crds/rp5.reportportal.io_serviceapiservicemonitor_crd.yaml
+++ b/deploy/crds/rp5.reportportal.io_serviceapiservicemonitor_crd.yaml
@@ -14,6 +14,7 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -26,10 +27,11 @@ spec:
             submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
           type: string
         metadata:
-          description: Metadata definition for the ReportPortal service-api ServiceMonitor object
+          name: ReportPortal service-api ServiceMonitor
           type: object
         spec:
           description: Specification of the desired behavior of the ServiceApiServiceMonitor Operator.
+          type: object
           properties:
             bearer_token_secret_name:
               description: ReportPortal bearer token secret name
