--- a/deploy/olm-catalog/reportportal-operator/manifests/rp5.reportportal.io_reportportalrestore_crd.yaml
+++ b/deploy/olm-catalog/reportportal-operator/manifests/rp5.reportportal.io_reportportalrestore_crd.yaml
@@ -14,6 +14,7 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -26,10 +27,11 @@ spec:
             submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
           type: string
         metadata:
-          description: Metadata definition for the ReportPortalRestore object
+          name: ReportPortalRestore
           type: object
         spec:
           description: Specification of the desired behavior of the ReportPortalRestore Operator.
+          type: object
           properties:
             pg_recovery:
               description: Enable Postgres recovery, need be 'yes' or 'no'
