Skip rabbitmq secret creation if already exist
The operator will continue to run reconciliation with the playbook
as with each run the status with changed is not 0. In the Operand
status condition the status will be always running without show
ansibleResult.

In ReportPortal depoly this is caused by the rabbitmq-erlang-cookie
value changed with each run, which could be skipped if the secret
have already been created.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/tasks/deploy_rabbitmq.yml
+++ b/roles/reportportal/tasks/deploy_rabbitmq.yml
@@ -28,6 +28,14 @@
     state: present
     definition: "{{ lookup('template', 'rabbitmq-healthchecks-configmap.yaml.j2') | from_yaml }}"
 
+- name: Check whether rabbitmq secret exist
+  k8s_info:
+    api_version: v1
+    kind: Secret
+    name: "{{ rabbitmq_secret }}"
+    namespace: "{{ meta.namespace }}"
+  register: rabbitmq_secret_def
+
 - name: Create rabbitmq definition secret
   k8s:
     state: present
@@ -37,6 +45,7 @@
   k8s:
     state: present
     definition: "{{ lookup('template', 'rabbitmq-secret.yaml.j2') | from_yaml }}"
+  when: rabbitmq_secret_def.resources|length == 0
 
 - name: Create rabbitmq role
   k8s:
