Add labels in es snapshot cronjob template
Add labels in template and add remove tasks with the labels in
remove role.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal-remove/tasks/remove_app.yml
+++ b/roles/reportportal-remove/tasks/remove_app.yml
@@ -152,6 +152,8 @@
   - "{{ query('k8s', namespace=meta.namespace, kind='Service', label_selector='app=elasticsearch-master') }}"
   - "{{ query('k8s', namespace=meta.namespace, kind='ConfigMap', label_selector='app=elasticsearch-master') }}"
   - "{{ query('k8s', namespace=meta.namespace, kind='CronJob', api_version='batch/v1beta1', label_selector='app=elasticsearch-master') }}"
+  - "{{ query('k8s', namespace=meta.namespace, kind='Job', label_selector='app=elasticsearch-master') }}"
+  - "{{ query('k8s', namespace=meta.namespace, kind='Pod', label_selector='app=elasticsearch-master') }}"
   - "{{ query('k8s', namespace=meta.namespace, kind='StatefulSet', label_selector='app=elasticsearch-master') }}"
   loop_control:
     loop_var: k8s_item
