--- a/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -34,6 +34,8 @@ metadata:
             "name": "example-reportportal-restore"
           },
           "spec": {
+            "es_restore": "yes",
+            "es_restore_date": "2020-08-07",
             "es_s3_backup_dir": "s3_backup",
             "es_snapshot_bucket": "es-snapshot-123123",
             "pg_recovery": "yes",
