Update operator-sdk base image to v0.18.2
- Update using ansible collection community.kubernetes k8s modules.
- Update build Dockerfile with install the ansible collections.
- Update CRD apiVersion to apiextensions.k8s.io/v1, v1beta1 will be
  deprecated soon.
- Update operator yaml with remove the sidecar container and add
  livenessProbe.
- Regenerate the molecule dir.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal-remove/tasks/remove_app.yml
+++ b/roles/reportportal-remove/tasks/remove_app.yml
@@ -1,6 +1,6 @@
 - name: Delete Report Portal resources
   ignore_errors: yes
-  k8s:
+  community.kubernetes.k8s:
     state: absent
     api_version: "{{ k8s_item.apiVersion }}"
     kind: "{{ k8s_item.kind }}"
@@ -32,7 +32,7 @@
 
 - name: Delete PostgreSQL resources
   ignore_errors: yes
-  k8s:
+  community.kubernetes.k8s:
     state: absent
     api_version: "{{ k8s_item.apiVersion }}"
     kind: "{{ k8s_item.kind }}"
@@ -62,7 +62,7 @@
 
 - name: Delete Minio resources
   ignore_errors: yes
-  k8s:
+  community.kubernetes.k8s:
     state: absent
     api_version: "{{ k8s_item.apiVersion }}"
     kind: "{{ k8s_item.kind }}"
@@ -92,7 +92,7 @@
 
 - name: Delete RabbitMQ resources
   ignore_errors: yes
-  k8s:
+  community.kubernetes.k8s:
     state: absent
     api_version: "{{ k8s_item.apiVersion }}"
     kind: "{{ k8s_item.kind }}"
@@ -124,7 +124,7 @@
 
 - name: Delete Elasticsearch resources
   ignore_errors: yes
-  k8s:
+  community.kubernetes.k8s:
     state: absent
     api_version: "{{ k8s_item.apiVersion }}"
     kind: "{{ k8s_item.kind }}"
