--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,10 +1,7 @@
 ---
-
 - name: Verify
   hosts: localhost
   connection: local
-  vars:
-    ansible_python_interpreter: '{{ ansible_playbook_python }}'
   tasks:
     - name: Get all pods in {{ namespace }}
       k8s_info:
@@ -15,3 +12,7 @@
 
     - name: Output pods
       debug: var=pods
+
+    - name: Example assertion
+      assert:
+        that: true
