--- a/roles/reportportal/tasks/pg_data_recovery.yml
+++ b/roles/reportportal/tasks/pg_data_recovery.yml
@@ -1,6 +1,6 @@
 - name: Delete PostgreSQL statefulset
   ignore_errors: yes
-  k8s:
+  community.kubernetes.k8s:
     state: absent
     api_version: "{{ k8s_item.apiVersion }}"
     kind: "{{ k8s_item.kind }}"
@@ -24,13 +24,13 @@
     loop_var: k8s_item
 
 - name: Create Postgresql statefulset
-  k8s:
+  community.kubernetes.k8s:
     state: present
     definition: "{{ lookup('template', 'pg-statefulset.yaml.j2') | from_yaml }}"
 
 - name: Wait Postgresql StatefulSet Pod replica status to running
   ignore_errors: yes
-  k8s_info:
+  community.kubernetes.k8s_info:
     kind: Pod
     label_selectors:
       - app = postgresql
