--- a/roles/reportportal/tasks/service_api_servicemonitor.yml
+++ b/roles/reportportal/tasks/service_api_servicemonitor.yml
@@ -1,4 +1,4 @@
 - name: Create service-api servicemonitor
-  k8s:
+  community.kubernetes.k8s:
     state: present
     definition: "{{ lookup('template', 'api-servicemonitor.yaml.j2') | from_yaml }}"
